<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ActualizarActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtGraduadoAct"
            app:layout_constraintStart_toStartOf="@+id/txtSemestreActual"
            app:layout_constraintEnd_toEndOf="@+id/txtSemestreActual" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtSemestreActual"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtFechaNacimiento" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imput_Apellido"
            app:layout_constraintStart_toStartOf="@+id/imput_Apellido" app:layout_constraintEnd_toEndOf="@+id/imput_Apellido"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/imput_Apellido" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/imput_Nombre"
            app:layout_constraintStart_toStartOf="@+id/imput_Nombre" app:layout_constraintEnd_toEndOf="@+id/imput_Nombre"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/imput_Nombre" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/btnEliminarEst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnEliminarEst"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btnActualizarEst" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="72dp"/>
    <Button
            android:text="@string/btnActualizarEst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnActualizarEst"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/txtGraduadoAct" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="52dp"/>
    <Button
            android:text="@string/btnCrearMat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCrearMat"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/txtGraduadoAct" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="72dp" app:layout_constraintStart_toEndOf="@+id/btnActualizarEst"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:text="@string/btnGestionarMateria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnGestionarMateria"
            app:layout_constraintStart_toEndOf="@+id/btnEliminarEst" android:layout_marginStart="25dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btnCrearMat"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txtSemestreActual"
            app:layout_constraintStart_toStartOf="@+id/txtFechaNacimiento"
            app:layout_constraintEnd_toEndOf="@+id/txtFechaNacimiento" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtFechaNacimiento"/>
    <Button
            android:text="@string/btnMenuRetorno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnMenuRetorno"
            android:visibility="visible"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/btnGestionarMateria"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="161dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="162dp"/>
</android.support.constraint.ConstraintLayout>